--- a/src/components/PopulationControls.module.css
+++ b/src/components/PopulationControls.module.css
@@ -1,5 +1,14 @@
 .population_controls {
-    border: 2px solid black;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 15px;
     padding: 2rem;
+
+    p > button {
+        background-color: rgb(21, 21, 21);
+        border: none;
+        cursor: pointer;
+        padding: .5rem;
+        color: white;
+        border-radius: 10px;
+    }
 }
